--- a/index.html
+++ b/index.html
@@ -92,9 +92,27 @@
             </div>
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
+                <strong>NYCC Private Event </strong> Friday, June 29 6:00PM
+              </div>
+              Norfolk, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
                 <strong>Hermitage Museum &amp; Gardens - Sunsets On The River</strong> Thursday, July 19 6:00PM
               </div>
               Norfolk, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>Smartmouth Brewing</strong> Friday, August 3
+              </div>
+              Norfolk, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>The Vanguard Brewpub &amp; Distillery</strong> Saturday, August 25
+              </div>
+              Hampton, VA
             </div>
           </div>
           <!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
