--- a/index.html
+++ b/index.html
@@ -152,31 +152,31 @@
           <h6>80/20 Burger Bar</h6>
           <center>
             <video width="250" height="200" controls>
-              <source src="video/20180113_225147.mp4" type="video/mp4"> Your browser does not support the video tag.
+              <source src="video/20180113_225147.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </center>
           <p class="text-center">Eyes Of The World</p>
           <center>
             <video width="250" height="200" controls>
-              <source src="video/20180113_225718.mp4" type="video/mp4"> Your browser does not support the video tag.
+              <source src="video/20180113_225718.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </center>
           <p class="text-center">Viola Lee Blues</p>
           <center>
             <video width="250" height="200" controls>
-              <source src="video/20180113_234932.mp4" type="video/mp4"> Your browser does not support the video tag.
+              <source src="video/20180113_234932.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </center>
           <p class="text-center">Shakedown Street</p>
           <center>
             <video width="250" height="200" controls>
-              <source src="video/20180114_004248.mp4" type="video/mp4"> Your browser does not support the video tag.
+              <source src="video/20180114_004248.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </center>
           <p class="text-center">Fire On The Mountain</p>
           <center>
             <video width="250" height="200" controls>
-              <source src="video/20180114_010114.mp4" type="video/mp4"> Your browser does not support the video tag.
+              <source src="video/20180114_010114.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
             </video>
           </center>
           <p class="text-center">The Harder They Come</p>
