--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
 
-  <title>GratefulJed.net</title>
+  <title>Grateful Jed - Norfolk, VA</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
