--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
       <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
 
   <title>Grateful Jed - Norfolk, VA</title>
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
@@ -74,7 +91,7 @@
   <section id="banner" class="text-center">
     <img id="banner-img" class="img-fluid" src="images/badge-white.png" alt="grateful-jed">
   </section>
-  <div class="container">
+  <div class="container" id="main">
     <section class="feature-section" id="events">
       <div id="show-card" class="card">
         <!--  <img class="card-img-top" src="..." alt="Card image cap">-->
