--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <ul class="list-group playlist">
             <li class="list-group-item" id="they_love_samson">They Love Each Other > Samson &amp; Delilah</li>
             <li class="list-group-item" id="bro_playing">Row Jimmy > Playing > Eyes > Playing</li>
-            <li class="list-group-item" id="new_minglewood">New Monglewood Blues</li>
+            <li class="list-group-item" id="new_minglewood">New Minglewood Blues</li>
             <!--
             <li class="list-group-item" id="china">China Cat Sunflower</li>
             <li class="list-group-item" id="fire">Fire On The Mountain</li>
