--- a/index.html
+++ b/index.html
@@ -3,43 +3,39 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
 
   <title>Grateful Jed - Norfolk, VA</title>
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-  <script src="jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
     crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
-
-  <script src="main.js"></script>
-
 </head>
 
 <body>
@@ -77,7 +73,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#video">Video</a>
         </li>
-<!--
+        <!--
         <li class="nav-item">
           <a class="nav-link" href="#gallery">Gallery</a>
         </li>
@@ -88,9 +84,14 @@
       </ul>
     </div>
   </nav>
-  <section id="banner" class="text-center">
-    <img id="banner-img" class="img-fluid" src="images/badge-white.png" alt="grateful-jed">
-  </section>
+  <main>
+    <header>
+      <h1 hidden>Grateful Jed</h1>
+      <section id="banner" class="text-center">
+        <img id="banner-img" class="img-fluid" src="images/badge-white.png" alt="grateful jed">
+      </section>
+    </header>
+  </main>
   <div class="container" id="main">
     <section class="feature-section" id="events">
       <div id="show-card" class="card">
@@ -204,7 +205,7 @@
         </div>
       </div>
     </section>
-<!--
+    <!--
     <section class="feature-section" id="gallery">
       <div class="card">
         <div class="card-body">
@@ -275,6 +276,7 @@
   <footer class="navbar navbar-dark bg-dark">
     <span style="color: white;">&copy;2018 Grateful Jed</span>
   </footer>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="main.js"></script>
 </body>
-
 </html>
