--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
@@ -271,12 +271,19 @@
         </div>
       </div>
     </section>
+    <section class="feature-section" id="contact">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Contact</h5>
+        </div>
+      </div>
+    </section>
 
   </div>
   <footer class="navbar navbar-dark bg-dark">
     <span style="color: white;">&copy;2018 Grateful Jed</span>
   </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
