--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -171,7 +174,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Video</h5>
-          <h6>80/20 Burger Bar</h6>
+          <h4 class="text-center">80/20 Burger Bar</h4>
           <center>
             <video width="250" height="200" controls>
               <source src="video/20180113_225147.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
@@ -275,6 +278,9 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Contact</h5>
+          <p>Mike Conley</p>
+          <p>540-353-2118</p>
+          <p>gratefuljed420@gmail.com</p>
         </div>
       </div>
     </section>
