--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h5 class="card-title">Events</h5>
           <!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
           <div class="list-group">
-            <div class="list-group-item">
+            <!-- <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
                 <strong>80/20 Burger Bar</strong> Saturday, April 21 10:00PM
               </div>
@@ -123,19 +123,19 @@
             </div>
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
-                <strong>Hermitage Museum &amp; Gardens - Sunsets On The River</strong> Thursday, July 19 6:00PM
+                <strong>Hermitage Museum &amp; Gardens &ndash; Sunsets On The River</strong> Thursday, July 19 6:00PM
+              </div>
+              Norfolk, VA
+            </div> -->
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>Smartmouth Brewing &ndash; Missing Digit Festival</strong> Friday, August 3 8:30PM
               </div>
               Norfolk, VA
             </div>
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
-                <strong>Smartmouth Brewing</strong> Friday, August 3
-              </div>
-              Norfolk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>The Vanguard Brewpub &amp; Distillery</strong> Saturday, August 25
+                <strong>The Vanguard Brewpub &amp; Distillery</strong> Saturday, August 25 8:00PM &vert; &dollar;5
               </div>
               Hampton, VA
             </div>
