fix audio player

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </ul>
           <br>
           <center>
-            <audio id="player" controls style="width: 250px;">
+            <audio id="player" controls autoplay="false" style="width: 250px;">
               <source id="mpeg-src" src="" type="audio/mpeg"> Your browser does not support the audio element.
             </audio>
           </center>
