Add google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122651515-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122651515-1');
+  </script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
