--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="card-body">
           <h5 class="card-title">Music</h5>
           <ul class="list-group playlist">
-            <li class="list-group-item" id="they_love_samson">They Love Each Other > Samson &amp; Delilah</li>
+            <li class="list-group-item active" id="they_love_samson">They Love Each Other > Samson &amp; Delilah</li>
             <li class="list-group-item" id="bro_playing">Row Jimmy > Playing > Eyes > Playing</li>
             <li class="list-group-item" id="new_minglewood">New Minglewood Blues</li>
             <!--
