--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#video">Video</a>
         </li>
-        <!--
+        
         <li class="nav-item">
           <a class="nav-link" href="#gallery">Gallery</a>
         </li>
--->
+
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
         </li>
@@ -139,15 +139,15 @@
             </div> -->
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
-                <strong>Smartmouth Brewing &ndash; Missing Digit Festival</strong> Friday, August 3 8:30PM
+                <strong>Bold Mariner Brewing Company</strong> Saturday, November 17 
               </div>
               Norfolk, VA
             </div>
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
-                <strong>The Vanguard Brewpub &amp; Distillery</strong> Saturday, August 25 8:00PM &vert; &dollar;5
+                <strong>South Beach Grill</strong> Saturday, January 5
               </div>
-              Hampton, VA
+              Virginia Beach, VA
             </div>
           </div>
           <!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
@@ -172,7 +172,7 @@
           </ul>
           <br>
           <center>
-            <audio id="player" controls autoplay="false" style="width: 250px;">
+            <audio id="player" controls autoplay="false" style="display: block; width: 250px; border-radius: 50px;">
               <source id="mpeg-src" src="" type="audio/mpeg"> Your browser does not support the audio element.
             </audio>
           </center>
@@ -218,28 +218,22 @@
         </div>
       </div>
     </section>
-    <!--
+    
     <section class="feature-section" id="gallery">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Gallery</h5>
-          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/20180113_225232.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/20180113_234109.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/20180113_223344.jpg" alt="Third slide">
-              </div>
-            </div>
-          </div>
+          <a class="img-anchor" href="images/hero.jpg"><img src="images/hero.jpg" alt="hero" height="200px;"></a>
+          <a class="img-anchor" href="images/vanguard1.jpg"><img src="images/vanguard1.jpg" alt="vanguard1" height="200px;"></a>
+          <a class="img-anchor" href="images/vanguard2.jpg"><img src="images/vanguard2.jpg" alt="vanguard2" height="200px;"></a>
+          <a class="img-anchor" href="images/vanguard3.jpg">
+            <img src="images/vanguard3.jpg" alt="vanguard3" height="200px;">
+          </a>
+
         </div>
       </div>
     </section>
--->
+
     <section class="feature-section" id="about">
       <div class="card">
         <div class="card-body">
@@ -282,6 +276,9 @@
             <br>
           </p>
         </div>
+        <hr>
+              <a class="song-list" href="images/Jed-List.pdf">Song List</a>
+
       </div>
     </section>
     <section class="feature-section" id="contact">
