--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
               </div>
               Norfolk, VA
             </div> -->
-            <div class="list-group-item">
+            <!-- <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
                 <strong>Bold Mariner Brewing Company</strong> Saturday, November 17 
               </div>
               Norfolk, VA
-            </div>
+            </div> -->
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
                 <strong>South Beach Grill</strong> Saturday, January 5
