remove hero from gallery

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Gallery</h5>
-          <a class="img-anchor" href="images/hero.jpg"><img src="images/hero.jpg" alt="hero" height="200px;"></a>
+          <!-- <a class="img-anchor" href="images/hero.jpg"><img src="images/hero.jpg" alt="hero" height="200px;"></a> -->
           <a class="img-anchor" href="images/vanguard1.jpg"><img src="images/vanguard1.jpg" alt="vanguard1" height="200px;"></a>
           <a class="img-anchor" href="images/vanguard2.jpg"><img src="images/vanguard2.jpg" alt="vanguard2" height="200px;"></a>
           <a class="img-anchor" href="images/vanguard3.jpg">
