--- a/index.html
+++ b/index.html
@@ -185,36 +185,47 @@
         <div class="card-body">
           <h5 class="card-title">Video</h5>
           <h4 class="text-center">80/20 Burger Bar</h4>
-          <center>
-            <video width="250" height="200" controls>
-              <source src="video/20180113_225147.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </center>
-          <p class="text-center">Eyes Of The World</p>
-          <center>
-            <video width="250" height="200" controls>
-              <source src="video/20180113_225718.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </center>
-          <p class="text-center">Viola Lee Blues</p>
-          <center>
-            <video width="250" height="200" controls>
-              <source src="video/20180113_234932.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </center>
-          <p class="text-center">Shakedown Street</p>
-          <center>
-            <video width="250" height="200" controls>
-              <source src="video/20180114_004248.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </center>
-          <p class="text-center">Fire On The Mountain</p>
-          <center>
-            <video width="250" height="200" controls>
-              <source src="video/20180114_010114.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-            </video>
-          </center>
-          <p class="text-center">The Harder They Come</p>
+          <div class="video-block">
+            <center>
+              <video width="250" height="200" controls>
+                <source src="video/20180113_225147.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
+              </video>
+            </center>
+            <p class="text-center">Eyes Of The World</p>
+          </div>
+          <div class="video-block">
+            <center>
+              <video width="250" height="200" controls>
+                <source src="video/20180113_225718.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
+              </video>
+            </center>
+            <p class="text-center">Viola Lee Blues</p>
+          </div>
+          <div class="video-block">
+            <center>
+              <video width="250" height="200" controls>
+                <source src="video/20180113_234932.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
+              </video>
+            </center>
+            <p class="text-center">Shakedown Street</p>
+          </div>
+          <div class="video-block">
+            <center>
+              <video width="250" height="200" controls>
+                <source src="video/20180114_004248.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
+              </video>
+            </center>
+            <p class="text-center">Fire On The Mountain</p>
+          </div>
+          <div class="video-block">
+            <center>
+              <video width="250" height="200" controls>
+                <source src="video/20180114_010114.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
+              </video>
+            </center>
+            <p class="text-center">The Harder They Come</p>
+          </div>
+
         </div>
       </div>
     </section>
