--- a/index.html
+++ b/index.html
@@ -145,9 +145,32 @@
             </div> -->
             <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
+                <strong>O'Connor Brewing Company</strong> Sunday, December 23
+              </div>
+              <p class="small-line">Nancy Langhorne Foundation</p>
+              <p class="small-line">Second Annual Xmas Eve Eve Benefit Concert</p>
+              <p class="small-line">Featuring DJ Williams Projekt</p>
+              Norfolk, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
                 <strong>South Beach Grill</strong> Saturday, January 5
               </div>
               Virginia Beach, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>Norfolk Yacht & Country Club</strong> Saturday, February 23
+              </div>
+              <p class="small-line">NYCC Concert Series</p>
+              Noroflk, VA
+            </div>
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>O'Connor Brewing Company</strong> Saturday, April 20
+              </div>
+              <p class="small-line">Starfire Festival</p>
+              Noroflk, VA
             </div>
           </div>
           <!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
