--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </div>
               Norfolk, VA
             </div> -->
-            <div class="list-group-item">
+            <!-- <div class="list-group-item">
               <div class="d-flex justify-content-between align-items-center">
                 <strong>O'Connor Brewing Company</strong> Sunday, December 23
               </div>
@@ -170,6 +170,13 @@
                 <strong>O'Connor Brewing Company</strong> Saturday, April 20
               </div>
               <p class="small-line">Starfire Festival</p>
+              Noroflk, VA
+            </div> -->
+            <div class="list-group-item">
+              <div class="d-flex justify-content-between align-items-center">
+                <strong>The Hermitage</strong> Friday, July 5
+              </div>
+              <p class="small-line">Sunsets on the River</p>
               Noroflk, VA
             </div>
           </div>
