--- a/index.html
+++ b/index.html
@@ -1,343 +1,131 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-122651515-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122651515-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+			gtag('config', 'UA-122651515-1');
+		</script>
 
-    gtag('config', 'UA-122651515-1');
-  </script>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta
+			name="description"
+			content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals."
+		/>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Come see Grateful Jed, a local Hampton Roads Grateful Dead tribute band. Actively playing in Norfolk, Hampton, and Virginia Beach, Grateful Jed is an enthusiastic group of musicians who share a passion for the Grateful Dead and other jam or improvisational music. Our members are Ian Flynn - Drums, Randy Williford - Bass, Dave Moore - Guitar, Vocals, Russell Brown - Guitar - Vocals and Michael Conley - Piano, Organ, Vocals.">
+		<title>Grateful Jed - Norfolk, VA</title>
 
-  <title>Grateful Jed - Norfolk, VA</title>
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-    crossorigin="anonymous"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
-    crossorigin="anonymous"></script>
-</head>
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+			integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="css/main.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Chicle"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Work+Sans"
+			rel="stylesheet"
+		/>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+			integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+			integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+			crossorigin="anonymous"
+		></script>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"
+			integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+			crossorigin="anonymous"
+		></script>
+	</head>
 
-<body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgba(0, 0, 0, 0.8);">
-    <a class="navbar-brand" href="#">Grateful Jed</a>
-    <!--
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
--->
-    <div class="navbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a href="https://www.facebook.com/GratefulJedVA/" class="nav-link">
-            <i class="fab fa-facebook-square"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="https://www.instagram.com/gratefuljedva/" class="nav-link">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li>
-      </ul>
+	<body>
+		<nav
+			class="navbar fixed-top navbar-expand-lg navbar-dark"
+			style="
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				background-color: rgba(0, 0, 0, 0.8);
+			"
+		>
+			<a class="navbar-brand" href="#">Grateful Jed</a>
 
-
-    </div>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#events">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#music">Music</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#video">Video</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" href="#gallery">Gallery</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <main>
-    <header>
-      <h1 hidden>Grateful Jed</h1>
-      <section id="banner" class="text-center">
-        <img id="banner-img" class="img-fluid" src="images/badge-white.png" alt="grateful jed">
-      </section>
-    </header>
-  </main>
-  <div class="container" id="main">
-    <section class="feature-section" id="events">
-      <div id="show-card" class="card">
-        <!--  <img class="card-img-top" src="..." alt="Card image cap">-->
-        <div class="card-body">
-          <h5 class="card-title">Events</h5>
-          <!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-          <div class="list-group">
-            <!-- <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>80/20 Burger Bar</strong> Saturday, April 21 10:00PM
-              </div>
-              Norfolk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>O'Connor Brewing Co.</strong> Saturday, May 19 9:00PM
-              </div>
-              Norfolk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>NYCC Private Event </strong> Friday, June 29 6:00PM
-              </div>
-              Norfolk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>Hermitage Museum &amp; Gardens &ndash; Sunsets On The River</strong> Thursday, July 19 6:00PM
-              </div>
-              Norfolk, VA
-            </div> -->
-            <!-- <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>Bold Mariner Brewing Company</strong> Saturday, November 17 
-              </div>
-              Norfolk, VA
-            </div> -->
-            <!-- <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>O'Connor Brewing Company</strong> Sunday, December 23
-              </div>
-              <p class="small-line">Nancy Langhorne Foundation</p>
-              <p class="small-line">Second Annual Xmas Eve Eve Benefit Concert</p>
-              <p class="small-line">Featuring DJ Williams Projekt</p>
-              Norfolk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>South Beach Grill</strong> Saturday, January 5
-              </div>
-              Virginia Beach, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>Norfolk Yacht & Country Club</strong> Saturday, February 23
-              </div>
-              <p class="small-line">NYCC Concert Series</p>
-              Noroflk, VA
-            </div>
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>O'Connor Brewing Company</strong> Saturday, April 20
-              </div>
-              <p class="small-line">Starfire Festival</p>
-              Noroflk, VA
-            </div> -->
-            <div class="list-group-item">
-              <div class="d-flex justify-content-between align-items-center">
-                <strong>The Hermitage</strong> Friday, July 5
-              </div>
-              <p class="small-line">Sunsets on the River</p>
-              Noroflk, VA
-            </div>
-          </div>
-          <!--    <a href="#" class="btn btn-primary">Go somewhere</a>-->
-        </div>
-      </div>
-    </section>
-    <section class="feature-section" id="music">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Music</h5>
-          <ul class="list-group playlist">
-            <li class="list-group-item active" id="they_love_samson">They Love Each Other > Samson &amp; Delilah</li>
-            <li class="list-group-item" id="bro_playing">Row Jimmy > Playing > Eyes > Playing</li>
-            <li class="list-group-item" id="new_minglewood">New Minglewood Blues</li>
-            <!--
-            <li class="list-group-item" id="china">China Cat Sunflower</li>
-            <li class="list-group-item" id="fire">Fire On The Mountain</li>
-            <li class="list-group-item" id="gold">The Golden Road</li>
-            <li class="list-group-item" id="hard">Harder They Come</li>
-            <li class="list-group-item" id="samson">Samson and Delilah</li>
--->
-          </ul>
-          <br>
-          <center>
-            <audio id="player" controls autoplay="false" style="display: block; width: 250px; border-radius: 50px;">
-              <source id="mpeg-src" src="" type="audio/mpeg"> Your browser does not support the audio element.
-            </audio>
-          </center>
-
-        </div>
-      </div>
-    </section>
-    <section class="feature-section" id="video">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Video</h5>
-          <h4 class="text-center">80/20 Burger Bar</h4>
-          <div class="video-block">
-            <center>
-              <video width="250" height="200" controls>
-                <source src="video/20180113_225147.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-              </video>
-            </center>
-            <p class="text-center">Eyes Of The World</p>
-          </div>
-          <div class="video-block">
-            <center>
-              <video width="250" height="200" controls>
-                <source src="video/20180113_225718.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-              </video>
-            </center>
-            <p class="text-center">Viola Lee Blues</p>
-          </div>
-          <div class="video-block">
-            <center>
-              <video width="250" height="200" controls>
-                <source src="video/20180113_234932.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-              </video>
-            </center>
-            <p class="text-center">Shakedown Street</p>
-          </div>
-          <div class="video-block">
-            <center>
-              <video width="250" height="200" controls>
-                <source src="video/20180114_004248.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-              </video>
-            </center>
-            <p class="text-center">Fire On The Mountain</p>
-          </div>
-          <div class="video-block">
-            <center>
-              <video width="250" height="200" controls>
-                <source src="video/20180114_010114.mp4#t=2" type="video/mp4"> Your browser does not support the video tag.
-              </video>
-            </center>
-            <p class="text-center">The Harder They Come</p>
-          </div>
-
-        </div>
-      </div>
-    </section>
-    
-    <section class="feature-section" id="gallery">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Gallery</h5>
-          <!-- <a class="img-anchor" href="images/hero.jpg"><img src="images/hero.jpg" alt="hero" height="200px;"></a> -->
-          <a class="img-anchor" href="images/vanguard1.jpg"><img src="images/vanguard1.jpg" alt="vanguard1" height="200px;"></a>
-          <a class="img-anchor" href="images/vanguard2.jpg"><img src="images/vanguard2.jpg" alt="vanguard2" height="200px;"></a>
-          <a class="img-anchor" href="images/vanguard3.jpg">
-            <img src="images/vanguard3.jpg" alt="vanguard3" height="200px;">
-          </a>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="feature-section" id="about">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p>Grateful Jed was born as a side project of some veteran musicians that were fans of the Grateful Dead and other
-            jam bands. It became obvious that people liked what we were doing so we locked in a line-up and made this our
-            primary project. The songs are our launchpad for jamming and following the music where it takes us. The emphasis
-            is on fun and crowd appeal.</p>
-          <p>
-            The band has set records everywhere they play. Starting with a two year run at the Belmont House of Smoke in Norfolk, the
-            band broke attendance and bar sales records the last three times they played the venue. Moving on to 80/20 Burger
-            Bar after the closing of the Belmont, the success continued breaking records at that venue.
-          </p>
-          <p>
-            Grateful Jed is ready to spread our reach to take the music to additional venues. Check us out!</p>
-          <p class="text-center">
-            <strong>Michael Conley</strong>
-            <br>
-            <em>Keyboardist, Vocalist</em>
-            <br>
-            <br>
-            <strong>Dave Moore</strong>
-            <br>
-            <em>Guitarist, Vocalist</em>
-            <br>
-            <br>
-            <strong>Russell Brown</strong>
-            <br>
-            <em>Guitarist, Vocalist</em>
-            <br>
-            <br>
-            <strong>Ian Flynn</strong>
-            <br>
-            <em>Drummer</em>
-            <br>
-            <br>
-            <strong>Randy Williford</strong>
-            <br>
-            <em>Bassist</em>
-            <br>
-          </p>
-        </div>
-        <hr>
-              <a class="song-list" href="images/Jed-List.pdf">Song List</a>
-
-      </div>
-    </section>
-    <section class="feature-section" id="contact">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Contact</h5>
-          <p>Mike Conley</p>
-          <p>540-353-2118</p>
-          <p>gratefuljed420@gmail.com</p>
-        </div>
-      </div>
-    </section>
-
-  </div>
-  <footer class="navbar navbar-dark bg-dark">
-    <span style="color: white;">&copy;2018 Grateful Jed</span>
-  </footer>
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+			<span style="flex: 1 0 0"></span>
+			<div class="navbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a href="https://www.facebook.com/GratefulJedVA/" class="nav-link">
+							<i class="fab fa-facebook-square"></i>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.instagram.com/gratefuljedva/" class="nav-link">
+							<i class="fab fa-instagram"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<main>
+			<header>
+				<h1 hidden>Grateful Jed</h1>
+				<section id="banner" class="text-center">
+					<img
+						id="banner-img"
+						class="img-fluid"
+						src="images/badge-white.png"
+						alt="grateful jed"
+					/>
+				</section>
+			</header>
+		</main>
+		<div class="container" id="main">
+			<section class="feature-section" id="events">
+				<div id="show-card" class="card">
+					<div class="card-body">
+						<h5 class="card-title">Events</h5>
+						<div class="list-group">
+							<!-- <div class="list-group-item">
+								<div class="d-flex justify-content-between align-items-center">
+									<strong>The Hermitage</strong> Friday, July 5
+								</div>
+								<p class="small-line">Sunsets on the River</p>
+								Noroflk, VA
+							</div> -->
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+		<footer class="navbar navbar-dark bg-dark">
+			<span style="color: white">&copy;2021 Grateful Jed</span>
+		</footer>
+	</body>
 </html>
